@@ -2,6 +2,7 @@
 	* [Misc] Misc changes
 	* [Filesystem] Introduced "fs_texturesfolder", "fs_soundsFolder" and "fs_modelsFolder"
 	* [Misc] Misc changes
+	* [RenderSystem] Fixed external lightmaps
 
 2021-06-14 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Renderer dynamic module should have dot (.) before arch
